Cache,Transaction,Performance aspectleri eklendi.

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "TokenOptions": {
+    "Audience": "kemal@kemal.com",
+    "Issuer": "kemal@kemal.com",
+    "AccessTokenExpiration": 10,
+    "SecurityKey": "mysupersecretkeymysupersecretkey" // Belli dönemlerde deðiþtirilmelidir.
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
